src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Stage_of_Startup__c</fullName>
        <label>Stage of Startup</label>
        <picklist>
            <picklistValues>
                <fullName>Self Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends and Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Needed__c</fullName>
        <label>Start Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_Text__c</fullName>
        <formula>TEXT(ABS(VALUE(RIGHT(LEFT(TEXT(Actual_Start_Date__c),7),2))))&amp;&quot;/&quot;&amp;
TEXT(ABS(VALUE(RIGHT(TEXT(Actual_Start_Date__c),2))))&amp;&quot;/&quot;&amp;
LEFT(TEXT(Actual_Start_Date__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startup_Pitch__c</fullName>
        <label>Startup Pitch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Switch_or_Addition__c</fullName>
        <inlineHelpText>For internal transfer only</inlineHelpText>
        <label>Switch or Addition</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Preference__c</fullName>
        <label>Term Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Desks_Reserved__c</fullName>
        <label>Total Desks Reserved</label>
        <summarizedField>Opportunity_Reservable__c.Pending_Desks__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Value__c</fullName>
        <label>Total Monthly Value</label>
        <summarizedField>Opportunity_Reservable__c.Monthly_Price__c</summarizedField>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offices_Reserved__c</fullName>
        <label>Total Offices Reserved</label>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reservables_Selected__c</fullName>
        <label>Total Reservables Selected</label>
        <summaryForeignKey>Opportunity_Reservable__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tours__c</fullName>
        <label>Total Tours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Completed__c</fullName>
        <inlineHelpText>The date the Tour was completed.  Updated when Stage is Tour Complete.</inlineHelpText>
        <label>Tour Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tour Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Location</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Opportunities (Tour Location)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Notes__c</fullName>
        <label>Tour Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Form__c</fullName>
        <formula>HYPERLINK(&quot;https://welcome.wework.com/forms/tour.php?id=&quot;&amp;Id,&quot;Fill Out Form&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Outcome Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Notes__c</fullName>
        <label>Tour Outcome Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field will map the latest tour with the opportunity.</description>
        <label>Tour Outcome</label>
        <referenceTo>Tour_Outcome__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Scheduled__c</fullName>
        <inlineHelpText>The date that the appointment was made.  Not the date of the tour itself.</inlineHelpText>
        <label>Tour Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Time__c</fullName>
        <label>Tour Time</label>
        <picklist>
            <picklistValues>
                <fullName>10:00am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Toured_By1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toured By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Office Space</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Network Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Network Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Lost_Reason__c</controllingField>
            <picklistValues>
                <fullName>Not Good Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Tech Startup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wait_List_Date__c</fullName>
        <label>Wait List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wait_List_Last_Confirmed__c</fullName>
        <label>Wait List Last Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wait_List_Next_Check_In__c</fullName>
        <label>Wait List Next Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waitlist_Notes__c</fullName>
        <label>Waitlist Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WeWork_Employee_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeWork Employee Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>WeWork Management</value>
            </filterItems>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (WeWork Employee Referrer)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>When_do_you_need_a_space__c</fullName>
        <label>When do you need a space</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just looking/ no immediate need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4_Digit_Printer_Pin__c</fullName>
        <label>4-Digit Printer Pin #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Attendee_IDs__c</fullName>
        <inlineHelpText>One or more Eventbrite attendee ids for this campaign member, separated by semicolons.</inlineHelpText>
        <label>Eventbrite Attendee IDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Date_and_Time__c</fullName>
        <inlineHelpText>Date and time of the Eventbrite event for this purchase.</inlineHelpText>
        <label>Eventbrite Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Discount__c</fullName>
        <label>Eventbrite Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Event_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify an event.</inlineHelpText>
        <label>Eventbrite Event ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Order_ID__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify a ticket order.</inlineHelpText>
        <label>Eventbrite Order ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Order_Link__c</fullName>
        <formula>IF(ISNULL(gweb__Eventbrite_Order_ID__c), NULL, HYPERLINK(&apos;http://www.eventbrite.com/reports?eid=&apos; &amp; gweb__Eventbrite_Event_ID__c &amp; &apos;&amp;filterby=all,&apos; &amp; gweb__Eventbrite_Order_ID__c, &apos;View in Eventbrite&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eventbrite Order Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Ticket_Id__c</fullName>
        <inlineHelpText>ID used by Eventbrite to uniquely identify a ticket.</inlineHelpText>
        <label>Eventbrite Ticket ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Ticket_Quantity__c</fullName>
        <inlineHelpText>Number of tickets registered to this order.</inlineHelpText>
        <label>Eventbrite Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gweb__Eventbrite_Ticket_Type__c</fullName>
        <inlineHelpText>Type of Eventbrite ticket(s) ordered.</inlineHelpText>
        <label>Eventbrite Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_waitlist_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>tmp_waitlist_confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <label>utm_campaign_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>utm_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm_medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AMS_All_Open_Opportunities</fullName>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Member__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>Toured_By1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won,Closed Lost</value>
        </filters>
        <label>AMS All Open Opportunities (Metropool)</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Contract_Sent_and_Pending</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Contract Sent</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Contract Voided</value>
        </filters>
        <label>AMS01 - Contract Sent and Pending</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_Internal_WL</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>Start_Date_Needed__c</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>Member_Qualification__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Internal Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>AMS-Metropool</value>
        </filters>
        <label>AMS-Metropool Internal WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Metropool_WL</fullName>
        <booleanFilter>1 AND (2 or 3 or 4 or 5)</booleanFilter>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>Start_Date_Needed__c</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List,Internal Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>AMS-Metropool</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>AMS-metropool</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <label>AMS - All buildings Internal WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_WL</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>Member_Qualification__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>AMS-Weteringschans</value>
        </filters>
        <label>AMS WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATL_Buckhead_WL</fullName>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>Member_Qualification__c</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>ATL-Buckhead</value>
        </filters>
        <label>ATL-Buckhead WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATX_Congress_Internal_Wait_List</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Number_of_Desks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Internal Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>ATX-Congress</value>
        </filters>
        <label>ATX Congress Internal Wait List</label>
    </listViews>
    <listViews>
        <fullName>ATX_Congress_WL</fullName>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>Member_Qualification__c</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>ATX-Congress</value>
        </filters>
        <label>ATX-Congress WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATX_University_Park_WL</fullName>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Wait_List_Date__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Member_Name__c</columns>
        <columns>Primary_Member_Email__c</columns>
        <columns>Member_Qualification__c</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Office_Type_Notes__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>equals</operation>
            <value>ATX-University Park</value>
        </filters>
        <label>ATX-University Park WL</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Atlanta_Waitlist</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Locations_Interested__c</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>ATL-Tower Place</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <label>Atlanta Waitlist</label>
    </listViews>
    <listViews>
        <fullName>BEV_Beer_Sheva_All_Open_Opportunities</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Member__c</columns>
        <columns>Office_Type__c</columns>
        <columns>Number_of_Desks__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Tour_Notes__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>BEV-Beer Sheva</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed Won</value>
        </filters>
        <label>BEV-Beer Sheva All Open Opportunities</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BEV_Beer_Sheva_All_closed_Opportunities</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Primary_Member__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Tour_Notes__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Locations_Interested__c</field>
            <operation>includes</operation>
            <value>BEV-Beer Sheva</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>contains</operation>
            <value>Closed Won</value>
        </filters>
        <label>BEV-Beer Sheva All closed Opportunities</label>
        <sharedTo>
            <role>Community_Manager</role>
            <role>Event_Manager</role>
            <role>Management</role>
            <role>New_Member_Development_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BEV_Beer_Sheva_Contract_Sent</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <label>BEV-Beer Sheva Contract Sent</label>
        <sharedTo>
            <roleAndSubordinates>Associate_Community_Manager</roleAndSubordinates>
            <roleAndSubordinates>Community_Manager</roleAndSubordinates>
            <roleAndSubordinates>Community_Managers</roleAndSubordinates>
            <roleAndSubordinates>Front_Desk_Associate</roleAndSubordinates>
            <roleAndSubordinates>General_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BEV_Beer_Sheva_Tour_Complete</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Tour_Scheduled__c</columns>
        <columns>Tour_Location__c</columns>
        <columns>Tour_Outcome_Notes__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tour_Location__c</field>
            <operation>equals</operation>
            <value>BEV-Be&apos;er Sheva</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Tour Complete</value>
        </filters>
        <label>BEV-Beer Sheva Tour Complete</label>
        <sharedTo>
            <role>Associate_Community_Manager</role>
            <role>Community_Managers</role>
            <role>Front_Desk_Associate</role>
            <role>General_Manager</role>
            <role>Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BEV_signed_opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>Be&apos;er Sheva</value>
        </filters>
        <label>BEV - signed opportunity</label>
    </listViews>
    <recordTypes>
        <fullName>Enterprise_Solutions</fullName>
        <active>true</active>
        <businessProcess>Enterprise Solutions</businessProcess>
        <label>Enterprise Solutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Space</fullName>
        <active>true</active>
        <businessProcess>Event Space</businessProcess>
        <label>Event Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Affairs</fullName>
        <active>true</active>
        <businessProcess>Enterprise Solutions</businessProcess>
        <description>External Affairs</description>
        <label>External Affairs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Journey</fullName>
        <active>true</active>
        <businessProcess>Journey</businessProcess>
        <description>Let&apos;s provide beautiful journey to customers using this record type.</description>
        <label>Journey</label>
    </recordTypes>
</CustomObject>